--- a/medilabo/src/main/resources/application.properties
+++ b/medilabo/src/main/resources/application.properties
@@ -2,8 +2,9 @@
 spring.application.name=medilabo
 
 #Tomcat configuration
-server.port=8080
+server.port=7070
 
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=medilabo
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/medilabo
+spring.datasource.username=root
+spring.datasource.password=rootroot
