--- a/gateway/gateway/src/main/resources/application.properties
+++ b/gateway/gateway/src/main/resources/application.properties
@@ -2,6 +2,5 @@ spring.application.name=gateway
 #Tomcat configuration
 server.port=8080
 
-# spring.cloud.gateway.routes[0].id=user_route
-#spring.cloud.gateway.routes[0].uri=http://localhost:8000/user
-#spring.cloud.gateway.routes[0].predicates[0]=Path=/api/user/**
+spring.webflux.cors.enabled=true
+
