new method auth

--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -25,3 +25,5 @@ web.cors.allowed-methods=GET,POST,PATCH,PUT,DELETE,OPTIONS,HEAD
 web.cors.allowed-headers=Authorization,Content-Type
 web.cors.exposed-headers=Authorization
 
+spring.main.allow-bean-definition-overriding=true
+
