--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -8,22 +8,10 @@ spring.cloud.gateway.globalcors.corsConfigurations[/**].allowedOrigins=*
 spring.cloud.gateway.globalcors.corsConfigurations[/**].allowedMethods=GET,POST,DELETE,PUT
 spring.cloud.gateway.globalcors.corsConfigurations[/**].allowedHeaders=Authorization,Content-Type
 
-#spring.cloud.gateway.routes[0].id=medilabo
-#spring.cloud.gateway.routes[0].uri=${MEDILABO_URI:http://medilabo:8081/}
-#spring.cloud.gateway.routes[0].predicates[0]=Path=user/*
-#
-#spring.cloud.gateway.routes[1].id=note
-#spring.cloud.gateway.routes[1].uri=${NOTE_URI:http://note:8082/}
-#spring.cloud.gateway.routes[1].predicates[0]=Path=note/*
-#
-#spring.cloud.gateway.routes[2].id=report
-#spring.cloud.gateway.routes[2].uri=${REPORT_URI:http://report:8083/}
-#spring.cloud.gateway.routes[2].predicates[0]=Path=report/*
-
 web.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:4200}
 web.cors.allowed-methods=GET,POST,PATCH,PUT,DELETE,OPTIONS,HEAD
 web.cors.allowed-headers=Authorization,Content-Type
 web.cors.exposed-headers=Authorization
 
 spring.main.allow-bean-definition-overriding=true
-
+logging.level.org.springframework.security=DEBUG
