--- a/DOCKER/docker-compose.yml
+++ b/DOCKER/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       MYSQL_ROOT_PASSWORD: HGHJ45JID
     volumes:
             - /volume1/database/msa_data:/var/lib/mysql:rw
+            - ./mysql/scripts/init.sql:/docker-entrypoint-initdb.d/init.sql:ro 
     networks:
       - medilaboEnv-network
 
@@ -104,15 +105,20 @@ services:
 
   angular-app:
     container_name: angular-app
-    image: angular-app:latest
+    image: angular:latest
     restart: always
     build:
       context: ../ui
       dockerfile: Dockerfile
+    depends_on:
+      - gateway
+      - note
+      - medilabo
     networks:
       - medilaboEnv-network
     ports:
       - "4200:80"
+
 
 networks:
   medilaboEnv-network:
