--- a/DOCKER/docker-compose.yml
+++ b/DOCKER/docker-compose.yml
@@ -16,7 +16,7 @@ services:
             - /volume1/database/msa_data:/var/lib/mysql:rw
             - ./mysql/scripts/init.sql:/docker-entrypoint-initdb.d/init.sql:ro 
     networks:
-      - medilaboEnv-network
+      - medilabo-env-network
 
   note-db:
     container_name: note-db
@@ -31,7 +31,7 @@ services:
             MONGO_INITDB_ROOT_USERNAME: admin
             MONGO_INITDB_ROOT_PASSWORD: password
     networks:
-      - medilaboEnv-network
+      - medilabo-env-network
 
   medilabo:
     container_name: medilabo
@@ -43,14 +43,13 @@ services:
     depends_on:
         - medilabo_db
     networks:
-      - medilaboEnv-network
+      - medilabo-env-network
     environment:
       DATASOURCE_URL: jdbc:mysql://medilabo_db:3306/medilabo_db
       DATASOURCE_USERNAME: admin
       DATASOURCE_PASSWORD: password
       LOG_LEVEL: info
-    ports:
-      - "8081:8081"
+   
 
   note:
     container_name: note
@@ -62,7 +61,7 @@ services:
     depends_on:
       - note-db  
     networks:
-      - medilaboEnv-network
+      - medilabo-env-network
     environment:
       MONGO_URI: mongodb://admin:password@note-db:27017/
       MONGO_INITDB_DATABASE: medilabo_database
@@ -70,8 +69,7 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: password
       MONGO_AUTO_INDEX_CREATION: true
       LOG_LEVEL: info
-    ports:
-      - "8082:8082"
+   
 
   report:
     container_name: report
@@ -84,9 +82,8 @@ services:
       - note
       - medilabo
     networks:
-      - medilaboEnv-network
-    ports:
-      - "8083:8083"
+      - medilabo-env-network
+    
 
   gateway:
     container_name: gateway
@@ -99,7 +96,7 @@ services:
       - note
       - medilabo
     networks:
-      - medilaboEnv-network
+      - medilabo-env-network
     ports:
       - "8080:8080"
 
@@ -115,11 +112,11 @@ services:
       - note
       - medilabo
     networks:
-      - medilaboEnv-network
+      - medilabo-env-network
     ports:
       - "4200:80"
 
 
 networks:
-  medilaboEnv-network:
+  medilabo-env-network:
       driver: bridge
