problem cors to solve

--- a/ui/nginx.conf
+++ b/ui/nginx.conf
@@ -9,6 +9,8 @@ http {
         listen 80;
         server_name localhost;
 
+        add_header Access-Control-Allow-Origin *;
+
         # Location principale pour servir votre application Angular
         location / {
             root /usr/share/nginx/html;
