--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -1,4 +1,10 @@
-# Dockerfile for gateway
+FROM maven:3.8.6-openjdk-17 AS build
+
+COPY ./pom.xml ./pom.xml
+COPY ./src ./src
+
+RUN mvn clean package -DskipTests
+
 FROM openjdk:17-jdk-alpine
 
 COPY ./target/gateway.jar gateway.jar
