--- a/report/Dockerfile
+++ b/report/Dockerfile
@@ -1,4 +1,6 @@
-FROM maven:3.8.6-openjdk-17 AS build
+FROM maven:latest AS build
+
+WORKDIR /app
 
 COPY ./pom.xml ./pom.xml
 COPY ./src ./src
@@ -7,7 +9,7 @@ RUN mvn clean package -DskipTests
 
 FROM openjdk:17-jdk-alpine
 
-COPY ./target/report-0.0.1-SNAPSHOT.jar report.jar
+COPY --from=build /app/target/report-0.0.1-SNAPSHOT.jar report.jar
 
 COPY src/main/resources/application.properties /src/main/resources/application.properties
 COPY src/main/resources/triggerterms.json /src/main/resources/triggerterms.json
