--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -1,4 +1,6 @@
-FROM maven:3.8.6-openjdk-17 AS build
+FROM maven:latest AS build
+
+WORKDIR /app
 
 COPY ./pom.xml ./pom.xml
 COPY ./src ./src
@@ -7,6 +9,6 @@ RUN mvn clean package -DskipTests
 
 FROM openjdk:17-jdk-alpine
 
-COPY ./target/gateway.jar gateway.jar
+COPY --from=build /app/target/gateway.jar gateway.jar
 
 ENTRYPOINT ["java", "-jar", "gateway.jar"]
