--- a/note/Dockerfile
+++ b/note/Dockerfile
@@ -1,4 +1,6 @@
-FROM maven:3.8.6-openjdk-17 AS build
+FROM maven:latest AS build
+
+WORKDIR /app
 
 COPY ./pom.xml ./pom.xml
 COPY ./src ./src
@@ -7,6 +9,6 @@ RUN mvn clean package -DskipTests
 
 FROM openjdk:17-jdk-alpine
 
-COPY ./target/note-0.0.1-SNAPSHOT.jar note.jar
+COPY --from=build /app/target/note-0.0.1-SNAPSHOT.jar note.jar
 
 ENTRYPOINT ["java", "-jar", "note.jar"]
